# algorithm

./: AssembleBox.cpp  AssembleBox.h  CMakeLists.txt  ChickenAndRubbits.cpp  ChickenAndRubbits.h  InsertionSort.cpp  JosephProblem.cpp  JosephProblem.h  SelectionSort.cpp  TreeOutSchool.cpp  TreeOutSchool.h  main.cpp
